compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__qualified_type_invalid_operands.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport maths as math\npub fn add_two_vectors(a: math.Vector, b: math.Vector) {\n  a + b\n}\n"
---
----- SOURCE CODE
-- maths.rakun
pub record Vector { Vector(x: Float, y: Float) }

-- main.rakun

import maths as math
pub fn add_two_vectors(a: math.Vector, b: math.Vector) {
  a + b
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:3
  │
4 │   a + b
  │   ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    math.Vector
